--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
-*.html linguist-detectable=false
+*.md linguist-detectable=false
+*.json linguist-detectable=false
+*.xlsx linguist-detectable=false
 *.py linguist-detectable=true
